# Quill

./: .gitignore  Cargo.toml  README.md  todo.txt
src/: app.rs  main.rs  ollama.rs  ui.rs  utils.rs
