[package]
name = "quill"
version = "0.1.0"
edition = "2021"

[dependencies]
# Terminal UI framework
crossterm = "0.27"
tui = "0.19"

# HTTP client for Ollama API
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Async streams
futures = "0.3"
regex = "1"
